On blog page fixed supertag issue and tweaked overflow setting

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ a:hover {
 footer {
   display: flex;
   width: 100%;
-  height: 20px;
+  height: 30px;
   align-self: end;
   justify-content: center;
   color: #ffffff1d;
@@ -108,6 +108,7 @@ footer {
 .blog-content {
   width: 100%;
   height: 100vh;
+  overflow: auto;
 }
 
 .accordion {
@@ -135,6 +136,10 @@ h4 {
 
 .date-number {
   grid-column: 1/2;
+}
+
+.date-number sup {
+  line-height: 0;
 }
 
 .down-arrow {
@@ -208,6 +213,11 @@ h4 {
 
 strong {
   font-weight: bolder;
+}
+
+.about-footer {
+  margin-top: auto;
+  margin-bottom: 0;
 }
 
 /* ********************************************************** */
